--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bibinbabumj.github.io/TodoApp/",
+  "homepage": "http://bibinbabumj.github.io/TodoApp/",
   "name": "todoapp",
   "version": "0.1.0",
   "private": true,
